[package]
name = "vpinball-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3" }
#vpin = "0.17.6"
vpin = { path = "../vpin" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
